# OpenSfM

./: setup.py
annotation_gui_gcp/: GUI.py  gcp_manager.py  image_manager.py  main.py  orthophoto_view.py  run_ba.py  run_ba_single_rec.py  view.py
annotation_gui_gcp/cad_viewer/: cad_view.py
annotation_gui_gcp/cad_viewer/static/js/: main.js
data/berlin/: config.yaml
doc/source/: building.rst
opensfm/: config.py  dataset.py  features.py  io.py  matching.py  multiview.py  pairs_selection.py  reconstruction.py  reconstruction_map.py  reconstruction_mod.py  sift_gpu.py  tracking.py  types.py  undistort.py
opensfm/data/bow/: vlads_hahog_root_uchar.npy
opensfm/slam/: run_slam.py  slam_debug.py  slam_initializer.py  slam_mapper.py  slam_system.py  slam_tracker.py
opensfm/src/: CMakeLists.txt  bundle.h  csfm.cc  depthmap.cc  matching.cc  point.cc  point.h  reconstruction_alignment.h
opensfm/src/bundle/src/: absolute_motion_terms.h  bundle_adjuster.cc  error_utils.h  motion_prior_terms.h  relative_motion_terms.h
opensfm/src/dense/src/: depthmap.cc
opensfm/src/map/: CMakeLists.txt  camera.h  defines.h  landmark.h  manager.h  map.h  map_io.h  observation.h  pose.h  shot.h  slam_shot_data.h
opensfm/src/map/python/: pybind.cc
opensfm/src/map/src/: camera.cc  landmark.cc  manager.cc  map.cc  map_io.cc  shot.cc
opensfm/src/reconstruction/: CMakeLists.txt  camera.h  defines.h  landmark.h  manager.h  point.h  pose.h  shot.h
opensfm/src/reconstruction/src/: landmark.cc  manager.cc  point.cc  shot.cc
opensfm/src/slam/: CMakeLists.txt  guided_matching.h  guided_matching_bind.h  orb_extractor_bind.h  pyslam_utilities.h  slam_utilities.h
opensfm/src/slam/python/: pybind.cc
opensfm/src/slam/src/: guided_matching.cc  slam_map.cc  slam_utilities.cc
opensfm/test/: test_datastructures.py
opensfm/test/test_datastructures/: CMakeLists.txt  test_datastructures.cc  test_datastructures.py
openslam/: initializer.py  openslam.py  run_openslam.py  slam_config.py  slam_debug.py  slam_frame.py  slam_initializer.py  slam_input_sources.py  slam_mapper.py  slam_matcher.py  slam_system.py  slam_tracker.py  slam_types.py  slam_utils.py  speed_up_tests.py
openslam/src/: CMakeLists.txt  cslam.cc  cslam_types.cc  guided_matching_utils_py.cc  slam_utilities.cc  slam_utilities.h
openslam/src/slam_datastructures/: camera.cc  camera.h  frame.cc  frame.h  keyframe.cc  keyframe.h  landmark.cc  landmark.h  local_map_cleaner.cc  local_map_cleaner.h  mapper.h  slam_reconstruction.cc  slam_reconstruction.h
